# Silk-Decoder

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about.html
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/bind/: JNIDecoder.c  JNIEncoder.c  coder.h
app/src/main/cpp/javah/: com_ecodemo_silk_SilkCoder.h  com_xmoieo_silk_SilkCoder.h
app/src/main/cpp/test/: Encoder.c
app/src/main/cpp_/: CMakeLists.txt  decoder  silk-elf.S  silk.c
app/src/main/java/com/ecodemo/silk/: AboutActivity.kt  DecodeAdapter.kt  DecodeFile.kt  FileUriUtils.kt  MainActivity.kt  MxApplication.kt  MxRecyclerAdapter.kt  OtherDecoder.kt  PcmToMp3.kt  PlayerUtils.kt  QQDecoder.kt  SilkCoder.java  WaveHeader.kt
app/src/main/java/com/xmoieo/silk/: AboutActivity.kt  DecodeAdapter.kt  DecodeFile.kt  EncodedFileAdapter.kt  FileUriUtils.kt  MainActivity.kt  MxApplication.kt  MxRecyclerAdapter.kt  OtherDecoder.kt  PcmToMp3.kt  PlayerUtils.kt  QQDecoder.kt  SilkCoder.java  SilkDecoder.kt  SilkEncoder.kt  WaveHeader.kt
app/src/main/res/layout/: activity_decoder.xml  activity_encoder.xml  activity_main.xml  decode_file.xml  decode_item.xml  ffmpeg_log.xml  install_ffmpeg_dialog.xml  media.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: main.xml
